OPENJPA-1148 Build failures with 64bit Sun JDK6 on Linux due to PermGen space.  Part 1 - cleanup of setting jvm arguments for surefire.
git-svn-id: https://svn.apache.org/repos/asf/openjpa/trunk@789410 13f79535-47bb-0310-9956-ffa450edef68